--- a/source/_data/fluid_config.yml
+++ b/source/_data/fluid_config.yml
@@ -106,7 +106,7 @@ version:  # 主题版本相关
 # Header
 #---------------------------
 navbar:
-  blog_title: Pudding | 一名前端搬砖师 # 导航栏左侧的标题，为空则按 hexo config.title 显示
+  blog_title: Pudding | 新晋前端韭菜 # 导航栏左侧的标题，为空则按 hexo config.title 显示
   ground_glass:  # 导航栏毛玻璃特效，部分浏览器不支持会自动不生效
     enable: true
     px: 3  # 模糊像素，只能为数字，数字越大模糊度越高
@@ -354,7 +354,7 @@ about:  # 关于页需要手动创建，具体请见：https://hexo.fluid-dev.co
   subtitle:  # 打字机内容
   avatar: /img/avatar.png # 头像
   name: Pudding
-  introduce: 'A front-end developer' # 支持 HTML
+  introduce: '前端菜鸡 <br> 新晋前端韭菜 <br> A front-end developer ' # 支持 HTML
   icons: # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，class 代表图标的 css class
     - { class: 'iconfont icon-github-fill', link: 'https://github.com/bdingtech', tip: 'GitHub' }
     - { class: 'iconfont icon-qq-fill', link: '1362061587', tip: 'QQ' }
